@@ -16,7 +16,7 @@ public class AddNewLayerViewPlugIn extends AbstractPlugIn {
     Layer[] layers = context.getLayerNamePanel().getSelectedLayers();
     if (layers.length != 1) return false;
     Layer layer = layers[0];
-    LayerView layerView = new LayerView(layer);
+    LayerView layerView = new LayerView(layer.getName(), layer.getLayerManager());
     int index = context.getLayerManager().getCategory(layer).indexOf(layer);
     context.getLayerManager().getCategory(layer).add(++index, layerView);
     layerView.setEditable(false);
